--- a/_site.yml
+++ b/_site.yml
@@ -1,16 +1,8 @@
 name: "my-website"
-output_dir: "."
 navbar:
-  title: A. J. Ryan
+  title: "My Website"
   left:
-  - text: Home
-    href: index.html
-  - text: About
-    href: about.html
-output:
-  html_document:
-    theme: cosmo
-    highlight: textmate
-    include:
-      after_body: footer.html
-    css: styles.css
+    - text: "Home"
+      href: index.html
+    - text: "About"
+      href: about.html
