--- a/_site.yml
+++ b/_site.yml
@@ -1,8 +1,22 @@
-name: "my-website"
+name: "Alexander Ryan"
+output_dir: "_site"
 navbar:
-  title: "My Website"
+  title: "Alexander Ryan"
   left:
-    - text: "Home"
-      href: index.html
-    - text: "About"
-      href: about.html
+    - text: "Writing"
+      href: writing.html
+    - text: "Painting"
+      href: painting.html
+  right:
+    - icon: fa-envelope fa-lg
+      href: contact.html
+    - icon: fa-github fa-lg
+      href: http://github.com/ryaale
+    - icon: fa-twitter fa-lg
+      href: https://twitter.com/bon_dilettante
+    - icon: fa-linkedin fa-lg
+      href: https://www.linkedin.com/in/alexander-j-ryan/
+output:
+  html_document:
+    theme: paper
+    css: 'styles.css'
